assets/cart-bar.css
@charset "UTF-8";
.cart-bar {
  --bg: var(--COLOR-BG);
  display: block;
  position: fixed;
  left: 0;
  bottom: 0;
  z-index: 2001;
  width: 100%;
  height: 80px;
  overflow: hidden;
  background: var(--bg);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  opacity: 0;
  visibility: hidden;
  transform: translateY(100%);
  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0s linear 0.3s;
}
.cart-bar[data-position=top] {
  top: 0;
  bottom: auto;
  transform: translateY(-100%);
}
.cart-bar.is-visible {
  opacity: 1;
  visibility: visible;
  transform: translateY(0);
  transition: opacity 0.5s ease, transform 0.5s ease, visibility 0s linear 0s;
}
@media only screen and (max-width: 749px) {
  .cart-bar {
    display: flex;
    align-items: center;
    min-height: 120px;
    height: auto;
  }
  .cart-bar::after {
    min-height: inherit;
    font-size: 0;
    content: "";
  }
}

.cart-bar:has(*:focus) {
  opacity: 1;
  visibility: visible;
  transform: translateY(0);
  transition: opacity 0.5s ease, transform 0.5s ease, visibility 0s linear 0s;
}

.cart-bar__form__wrapper {
  display: flex;
  align-items: center;
  height: 100%;
  padding: 0 var(--outer);
}
@media only screen and (max-width: 749px) {
  .cart-bar__form__wrapper {
    flex: 0 1 100%;
    flex-direction: column;
    align-items: stretch;
    padding: 10px var(--outer);
  }
}

.cart-bar__form,
.cart-bar__info {
  display: flex;
  align-items: center;
}

.cart-bar__form {
  max-width: 50%;
  margin-left: auto;
}
@media only screen and (max-width: 749px) {
  .cart-bar__form {
    display: block;
    max-width: none;
    margin: 0;
  }
}
.cart-bar__form .product__selectors {
  margin: 0;
  display: flex;
  align-items: stretch;
  flex-wrap: nowrap;
  height: 50px;
  padding: 0;
}
.cart-bar__form select {
  height: 100%;
  border: 0;
  margin: 0;
}
.cart-bar__form .selector-wrapper {
  height: 100%;
  min-width: 120px;
  padding-right: 5px;
  border-left: 1px solid var(--border);
}
.cart-bar__form .product__submit {
  min-width: 0;
  margin: 0;
}
.cart-bar__form .product__submit__buttons {
  display: inline-block;
  width: auto;
  margin: 0;
}
.cart-bar__form .product__submit__add {
  position: relative;
  overflow: hidden;
  min-height: 50px;
  min-width: 260px;
  padding-left: 35px;
  padding-right: 35px;
  margin: 0;
  line-height: 0;
  text-overflow: ellipsis;
  white-space: nowrap;
}
.cart-bar__form .product__submit__add span.btn__text {
  display: flex;
  align-items: center;
  justify-content: center;
  line-height: normal;
}
@media only screen and (max-width: 989px) {
  .cart-bar__form .product__submit__add {
    min-width: 200px;
  }
}
@media only screen and (max-width: 749px) {
  .cart-bar__form .product__submit__add {
    width: 100%;
    min-height: var(--btn-height, 42px);
    white-space: normal;
  }
}
.cart-bar__form button {
  visibility: visible;
}

.cart-bar__info {
  justify-content: flex-start;
  position: relative;
  min-width: 0;
  padding-right: 10px;
}
@media only screen and (max-width: 749px) {
  .cart-bar__info {
    display: block;
    flex-wrap: wrap;
    justify-content: center;
    padding-right: 0;
    text-align: center;
  }
  .cart-bar__info:not(:last-child) {
    margin-bottom: 15px;
  }
}

.cart-bar__image {
  width: 50px;
  height: 50px;
  padding: 5px;
  margin: 0 10px 0 0;
}
.cart-bar__image img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.cart-bar__product__title {
  line-height: 25px;
  margin: 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: var(--font-body-large);
}
@media only screen and (max-width: 749px) {
  .cart-bar__product__title {
    display: inline;
    padding: 0 3px;
    white-space: normal;
  }
}

.cart-bar__product__price {
  position: relative;
  display: flex;
  align-items: center;
  line-height: 25px;
  padding: 0 0 0 10px;
  margin: 0;
  font-size: var(--font-body-medium);
}
@media only screen and (max-width: 749px) {
  .cart-bar__product__price {
    justify-content: center;
  }
}
.variant--unavailable .cart-bar__product__price {
  display: none;
}
@media only screen and (min-width: 750px) {
  .cart-bar__product__price::before {
    content: "•";
    padding: 0 10px;
  }
}
@media only screen and (max-width: 749px) {
  .cart-bar__product__price .product__price--sale {
    padding-right: 6px;
    margin-right: 0;
  }
}

.cart-bar__submit {
  margin-right: 0;
}

